--- a/adminemail.html
+++ b/adminemail.html
@@ -893,7 +893,7 @@
                         lastSentTime.getMinutes() !== currentMinute ||
                         lastSentTime.getDate() !== now.getDate()) {
                         
-                        sendScheduledEmail(time.label, time.hour === 16);
+                        sendScheduledEmail(time.label, true);
                         lastSentTime = new Date();
                     }
                 }
