--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -25,7 +25,7 @@
             --complete: #4ECCA3;
             --aborted: #FF6B6B;
             --cancelled: #9A9AB0;
-            --short-notice: #C77DFF;
+            --short-notice: #90ee90;
         }
        
         * {
