--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -366,7 +366,7 @@
         }
 
         .job-card.status-short-notice-cancellation {
-            background: linear-gradient(135deg, var(--short-notice), #B65EFF);
+            background: linear-gradient(135deg, var(--short-notice), #90ee90);
         }
 
         .job-card .completion-overlay {
@@ -644,7 +644,7 @@
         }
 
         .status-btn.short-notice {
-            background: linear-gradient(135deg, var(--short-notice), #B65EFF);
+            background: linear-gradient(135deg, var(--short-notice), #90ee90);
             border: 2px solid #C77DFF;
         }
 
