--- a/adminaudit.html
+++ b/adminaudit.html
@@ -832,13 +832,13 @@
                 <div class="filter-group">
                     <label class="filter-label" for="audit-status">Audit Status</label>
                     <select id="audit-status" class="filter-select">
-                        <option value="all">All Jobs</option>
-                        <option value="pending" selected>Pending Audit</option>
-                        <option value="pass">No Issues</option>
-                        <option value="complete-with-issues">Complete With Issues</option>
-                        <option value="unable">Unable to Audit</option>
-                        <option value="in-progress">Audit - In Progress</option>
-                    </select>
+    <option value="all" selected>All Jobs</option>
+    <option value="pending">Pending Audit</option>
+    <option value="pass">No Issues</option>
+    <option value="complete-with-issues">Complete With Issues</option>
+    <option value="unable">Unable to Audit</option>
+    <option value="in-progress">Audit - In Progress</option>
+</select>
                 </div>
             </div>
 
