--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -1107,7 +1107,7 @@
             
             const startDateInput = document.getElementById('start-date');
             startDateInput.valueAsDate = monday;
-            startDateInput.disabled = true;
+            // Start date is now editable - no longer disabled
             
             loadJobs();
         }
