--- a/conductsurvey.html
+++ b/conductsurvey.html
@@ -598,7 +598,7 @@
                     <div class="conditional-field" id="meter-installation" style="display: none;">
                         <div class="form-group">
                             <label class="form-label required">What work is required on the meter?</label>
-                            <textarea id="meter-work-details" class="form-input" rows="3" placeholder="Please describe the work required..." required></textarea>
+                            <textarea id="meter-work-details" class="form-input" rows="3" placeholder="Please describe the work required..."</textarea>
                         </div>
                        
                         <label class="form-label required">Upload Photo(s) of Meter</label>
