--- a/teamview.html
+++ b/teamview.html
@@ -1502,7 +1502,7 @@
                 <h2 class="modal-title">🧰 Kit List</h2>
                 <button class="close-btn" onclick="closeKitListModal()">×</button>
             </div>
-            <p>You will be redirected to the Bespoke Portal to access the kit list and materials database.</p>
+            <p>You will be redirected to the Portal to access the kit list and materials database.</p>
             <div class="kit-list-btn-group">
                 <a href="https://bespokeportal.co.uk/" target="_blank" class="kit-list-btn">
                     Open Kit List
