--- a/admin.html
+++ b/admin.html
@@ -737,6 +737,12 @@
                     <div class="action-title">View Completed Jobs</div>
                     <div class="action-description">Browse all finished installations</div>
                 </div>
+                
+                <div class="action-card" onclick="window.location.href='submitfigures.html'">
+                    <div class="action-icon"></div>
+                    <div class="action-title">Submit Figures</div>
+                    <div class="action-description">View all completed jobs that require invoicable figures</div>
+                </div>
             </div>
         </div>
       
