--- a/admin.html
+++ b/admin.html
@@ -739,7 +739,7 @@
                 </div>
                 
                 <div class="action-card" onclick="window.location.href='submitfigures.html'">
-                    <div class="action-icon"></div>
+                    <div class="action-icon">💵</div>
                     <div class="action-title">Submit Figures</div>
                     <div class="action-description">View all completed jobs that require invoicable figures</div>
                 </div>
