--- a/submitfigures.html
+++ b/submitfigures.html
@@ -631,6 +631,7 @@
             const jobType = job['Job Type'] || 'Standard';
             const lead = job['Lead'] || job['Lead Engineer'] || job['engineer'] || 'Unassigned';
             const postcode = job['Postcode'] || 'N/A';
+            const slateRoof = job['slateRoof'] || 'N/A';
 
             return `
                 <div class="job-card ${isShortNotice ? 'short-notice' : ''}" data-job-id="${job.id}">
@@ -666,6 +667,10 @@
                         <div class="job-detail">
                             <div class="detail-label">Postcode</div>
                             <div class="detail-value">${escapeHtml(postcode)}</div>
+                        </div>
+                        <div class="job-detail">
+                            <div class="detail-label">Slate Roof</div>
+                            <div class="detail-value">${escapeHtml(slateRoof)}</div>
                         </div>
                     </div>
 
