--- a/submitfigures.html
+++ b/submitfigures.html
@@ -193,6 +193,31 @@
             border-color: var(--short-notice);
         }
 
+        .notes-section {
+            background: var(--dark-lighter);
+            border-radius: 8px;
+            padding: 1rem;
+            margin-bottom: 1.5rem;
+            border-left: 4px solid var(--accent);
+        }
+
+        .notes-header {
+            color: var(--accent);
+            font-size: 0.9rem;
+            font-weight: 700;
+            margin-bottom: 0.5rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+
+        .notes-content {
+            color: var(--text);
+            font-size: 0.95rem;
+            line-height: 1.6;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
+
         .job-header {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -685,6 +710,13 @@
                             <div class="detail-value">${escapeHtml(slateRoof)}</div>
                         </div>
                     </div>
+
+                    ${job.notes ? `
+                    <div class="notes-section">
+                        <div class="notes-header">📝 Job Notes</div>
+                        <div class="notes-content">${escapeHtml(job.notes)}</div>
+                    </div>
+                    ` : ''}
 
                     <div class="figures-section">
                         <div class="input-group">
