--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -474,7 +474,7 @@
 
                 const { siteId, driveId, fileId, worksheetName } = SHAREPOINT_CONFIG;
                 const encodedSheet = encodeURIComponent(worksheetName);
-                const today = new Date().toLocaleDateString('en-GB'); // DD/MM/YYYY
+                const today = formatDate(new Date()); // DD/MM/YYYY
 
                 // Step 1: Find next empty row
                 const rangeUrl = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/items/${fileId}/workbook/worksheets/${encodedSheet}/usedRange`;
