--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -475,17 +475,22 @@
                 const { siteId, driveId, fileId, worksheetName } = SHAREPOINT_CONFIG;
                 const encodedSheet = encodeURIComponent(worksheetName);
 
-                // Force DD/MM/YYYY - never rely on locale or JS date auto-formatting
+                // Force DD/MM/YYYY for today's date
+                // For startDate/finishDate we use the string directly from Firebase (already DD/MM/YYYY)
                 function toUKDate(input) {
                     if (!input) return '';
-                    if (typeof input === 'string' && /^\d{2}\/\d{2}\/\d{4}$/.test(input)) return input;
-                    const d = (input instanceof Date) ? input : new Date(input);
-                    if (isNaN(d.getTime())) return '';
-                    return String(d.getDate()).padStart(2,'0') + '/' +
-                           String(d.getMonth()+1).padStart(2,'0') + '/' +
-                           d.getFullYear();
+                    // If already DD/MM/YYYY string, return as-is - do NOT parse through Date object
+                    if (typeof input === 'string' && /^\d{1,2}\/\d{1,2}\/\d{4}$/.test(input)) return input;
+                    // Only for actual Date objects (like today)
+                    if (input instanceof Date) {
+                        return String(input.getDate()).padStart(2,'0') + '/' +
+                               String(input.getMonth()+1).padStart(2,'0') + '/' +
+                               input.getFullYear();
+                    }
+                    return String(input);
                 }
-                const today = toUKDate(new Date());
+                const _n = new Date();
+                const today = String(_n.getDate()).padStart(2,'0') + '/' + String(_n.getMonth()+1).padStart(2,'0') + '/' + _n.getFullYear();
 
                 // Step 1: Read column A to find the true last used row
                 // Scans all values so manual entries between rows are respected
