--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -521,12 +521,16 @@
                 }
 
                 // Step 2: Write row A through I
+                // Prepend single quote to force Excel to treat dates as text (preserves DD/MM/YYYY format)
+                const startDateText = formatDateForExcel(jobData.startDate);
+                const finishDateText = formatDateForExcel(jobData.finishDate);
+                
                 const rowValues = [[
                     jobData.jobNumber,                          // A - J Number
                     jobData.postcode,                           // B - Post code
-                    formatDateForExcel(jobData.startDate),      // C - Start Date (DD/MM/YYYY)
-                    formatDateForExcel(jobData.finishDate),     // D - Finish Date (DD/MM/YYYY)
-                    today,                                      // E - Delay Date (DD/MM/YYYY)
+                    "'" + startDateText,                        // C - Start Date (DD/MM/YYYY as text)
+                    "'" + finishDateText,                       // D - Finish Date (DD/MM/YYYY as text)
+                    "'" + today,                                // E - Delay Date (DD/MM/YYYY as text)
                     jobData.delays,                             // F - Reason For Delay
                     '',                                         // G - STS Notified (left blank)
                     '',                                         // H - Reattendance Date (left blank)
