--- a/adminaudit.html
+++ b/adminaudit.html
@@ -639,7 +639,7 @@
             isFiltered = !!(jobSearch || dateFrom || dateTo || jobStatusFilter !== 'all' || auditStatus !== 'all');
 
             const filterFn = job => {
-                if (jobSearch && !job.jobNumber.toLowerCase().includes(jobSearch)) return false;
+              if (jobSearch && !job.jobNumber.toLowerCase().includes(jobSearch) && !job.postcode.toLowerCase().includes(jobSearch)) return false;
                 if (job.completionDate) {
                     if (dateFrom && job.completionDate < dateFrom) return false;
                     if (dateTo && job.completionDate > dateTo) return false;
