--- a/adminaudit.html
+++ b/adminaudit.html
@@ -273,7 +273,7 @@
             <div class="filters-grid">
                 <div class="filter-group">
                     <label class="filter-label" for="job-search">Job Number</label>
-                    <input type="text" id="job-search" class="filter-input" placeholder="Search by job number...">
+                    <input type="text" id="job-search" class="filter-input" placeholder="Search by job number or postcode...">
                 </div>
                 <div class="filter-group">
                     <label class="filter-label" for="date-from">Date From</label>
