--- a/adminviewjobs.html
+++ b/adminviewjobs.html
@@ -746,6 +746,10 @@
                         <input type="number" id="edit-days" class="form-input" min="1">
                     </div>
                     <div class="form-group full-width">
+    <label class="form-label" for="edit-po-numbers">PO Numbers</label>
+    <textarea id="edit-po-numbers" class="form-textarea" placeholder="Enter PO numbers..."></textarea>
+</div>
+                    <div class="form-group full-width">
                         <label class="form-label" for="edit-notes">Notes</label>
                         <textarea id="edit-notes" class="form-textarea" placeholder="Add notes about this job..."></textarea>
                     </div>
@@ -1184,6 +1188,7 @@
             document.getElementById('edit-projected-date').value = formatDateForInput(job.projectedCompletionDate);
             document.getElementById('edit-days').value = job.days;
             document.getElementById('edit-notes').value = job.notes;
+            document.getElementById('edit-po-numbers').value = job.poNumbers || '';
 
             document.getElementById('edit-modal').classList.add('show');
         }
@@ -1214,6 +1219,7 @@
                     'Team': document.getElementById('edit-team').value,
                     'Days': parseInt(document.getElementById('edit-days').value) || 1,
                     'notes': document.getElementById('edit-notes').value
+                    'poNumbers': document.getElementById('edit-po-numbers').value,
                 };
 
                 // Only add Status Update if a value was selected
